--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,24 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.ql-editor {
+  min-height: 300px !important;
+  max-height: 300px;
+  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: scroll;
+  border-radius: 20px;
+  border: none !important;
+}
+
+.ql-toolbar.ql-snow {
+  /* border: none !important; */
+  border-left: none !important;
+  border-right: none !important;
+  border-top: none !important;
+}
+
+.ql-container.ql-snow {
+  border: none !important;
+}
